--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,15 @@ find_package(glm REQUIRED)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Glad
 add_library(glad STATIC ./thirdparty/glad/glad.c)
 target_include_directories(glad PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
 
+# Rapidobj
+add_library(rapidobj INTERFACE)
+target_include_directories(rapidobj INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/rapidobj/include)
+
+# TRender
 add_executable(trender
     ./src/main.cpp
     ./src/input/raw/keyboard.cpp
@@ -18,9 +24,19 @@ add_executable(trender
     ./src/render/renderer.cpp
     ./src/shader/shader.cpp
     ./src/shader/program.cpp
+    ./src/resource/asset.cpp
     ./src/resource/obj/obj.cpp
 )
 
-target_include_directories(trender PRIVATE ./thirdparty)
+target_include_directories(trender
+    PRIVATE
+    ./thirdparty
+)
 
-target_link_libraries(trender glad glfw OpenGL::GL glm::glm)
+target_link_libraries(trender
+    glad
+    rapidobj
+    glfw
+    OpenGL::GL
+    glm::glm
+)
