--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "thirdparty/rapidobj"]
 	path = thirdparty/rapidobj
 	url = https://github.com/guybrush77/rapidobj
+[submodule "thirdparty/stb"]
+	path = thirdparty/stb
+	url = https://github.com/nothings/stb
