--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,8 @@ add_executable(trender
     ./src/input/raw/mouse.cpp
     ./src/render/window.cpp
     ./src/render/renderer.cpp
-    ./src/render/model.cpp
+    ./src/render/model/triangle.cpp
+    ./src/render/model/asset.cpp
     ./src/render/uniform.cpp
     ./src/render/texture.cpp
     ./src/render/material.cpp
