Reorganize to top level game class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_subdirectory(thirdparty/fastgltf)
 # TRender
 add_executable(trender
     ./src/main.cpp
+    ./src/game.cpp
     ./src/input/raw/keyboard.cpp
     ./src/input/raw/mouse.cpp
     ./src/render/window.cpp
