Add a builtin sphere model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(trender
     ./src/render/renderer.cpp
     ./src/render/model/2d/quad.cpp
     ./src/render/model/3d/cube.cpp
+    ./src/render/model/3d/sphere.cpp
     ./src/render/model/3d/asset.cpp
     ./src/render/material/material2d.cpp
     ./src/render/material/material3d.cpp
