Include assets that are permissible
All of these except the Stanford bunny are public domain. Stanford bunny isn't as clear so I included some attribution, although I doubt it would matter.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@ resources
 
 release/*
 !release/shaders
+
+# Assets explicitly not ignored are public domain
+!release/resources
+release/resources/*
+
+# Allow all attribution
+!release/resources/*.attribution.md
+
+# GLTF
+!release/resources/FlightHelmet
+
+# GLB
+!release/resources/BarramundiFish.glb
+!release/resources/DragonAttenuation.glb
+!release/resources/NormalTangentTest.glb
+
+# OBJ
+!release/resources/Bunny.obj
