--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/fastgltf"]
 	path = thirdparty/fastgltf
 	url = https://github.com/spnda/fastgltf
+[submodule "thirdparty/slang"]
+	path = thirdparty/slang
+	url = https://github.com/shader-slang/slang
