--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ release/resources/*
 !release/resources/DragonAttenuation.glb
 !release/resources/NormalTangentTest.glb
 !release/resources/NegativeScaleTest.glb
+!release/resources/TextureTransformMultiTest.glb
 
 # OBJ
 !release/resources/Bunny.obj
