Particle spawner system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ add_executable(trender
     ./src/util/error.cpp
     ./src/systems/particle.cpp
     ./src/systems/transform.cpp
+    ./src/systems/particle-spawner.cpp
 
     # Test Scene (included by default)
     ./src/scenes/test.cpp
