Fully convert test scene to new systems format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,10 +59,10 @@ add_executable(trender
     ./src/systems/boid-spawner.cpp
 
     # Test Scene (included by default)
-    # ./src/scenes/test.cpp
+    ./src/scenes/test.cpp
 
     # Need for Speed Scene (might not have assets included)
-    # ./src/scenes/nfs.cpp
+    ./src/scenes/nfs.cpp
 )
 
 target_include_directories(trender
