Massive refactoring to use plugins, dynamic resources
There are no longer freestanding "systems" but instead plugins. This is also how bevy does things. All of the expected default functionality is included in a PluginGroup (just a vector of structs that implements Plugin itself) including plugins that you should pretty much always use (entt, renderer, transform propagation). The only plugin not included as of now is the debug camera controller since you might prefer to roll your own.

Of course you can pick and choose which plugins to use.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,11 +52,12 @@ add_executable(trender
     ./src/asset/gltf/texture.cpp
     ./src/asset/gltf/gltf.cpp
     ./src/util/error.cpp
-    ./src/systems/particle.cpp
-    ./src/systems/transform.cpp
-    ./src/systems/particle-spawner.cpp
-    ./src/systems/boids.cpp
-    ./src/systems/boid-spawner.cpp
+    ./src/plugins/render/render.cpp
+    ./src/plugins/time/time.cpp
+    ./src/plugins/transform/transform.cpp
+    ./src/plugins/entt/entt.cpp
+    ./src/plugins/input/input.cpp
+    ./src/plugins/debug-cam-controller/debug-cam-controller.cpp
 
     # Test Scene (included by default)
     ./src/scenes/test.cpp
