Fix old ecs design bug
The Position and Scale components were indistinguishable to entt, so scale was being overwritten by position.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
         "name": "Launch",
         "program": "${workspaceFolder}/release/trender",
         "args": [],
-        "cwd": "${workspaceFolder}"
+        "cwd": "${workspaceFolder}/release"
       }
     ]
 }
