Add car and camera controller systems to nfs scene, include Car Concept by default (with attribution, of course)

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ release/resources/*
 # GLTF
 !release/resources/FlightHelmet
 !release/resources/TextureTransformTest
+!release/resources/CarConcept
 
 # GLB
 !release/resources/BarramundiFish.glb
