--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,11 +34,22 @@ jobs:
       with:
         vcpkgGitCommitId: 'a42af01b72c28a8e1d7b48107b33e4f286a55ef6'
 
+    - name: Setup MSVC (Windows)
+      if: matrix.os == 'windows-latest'
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
+
     - name: Install Linux dependencies
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
+        # Add the Ubuntu Toolchain PPA for newer GCC versions
+        sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+        sudo apt-get update
         sudo apt-get install -y \
+          gcc-14 \
+          g++-14 \
           build-essential \
           cmake \
           ninja-build \
@@ -50,6 +61,9 @@ jobs:
           libxext-dev \
           libwayland-dev \
           libxkbcommon-dev
+        # Set GCC-14 as the default compiler
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-14 100
+        sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-14 100
 
     - name: Install vcpkg packages
       run: |
@@ -59,6 +73,9 @@ jobs:
 
     - name: Configure CMake (Linux)
       if: matrix.os == 'ubuntu-latest'
+      env:
+        CC: gcc-14
+        CXX: g++-14
       run: |
         cmake --preset release \
           -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake" \
