Try to integrate vcpkg installs with VS
Might be why glm isn't being found. Although glfw also fails to install beforehand but that doesn't stop the build, somehow..

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,6 +69,7 @@ jobs:
       run: |
         vcpkg install glfw3:${{ matrix.vcpkg_triplet }}
         vcpkg install glm:${{ matrix.vcpkg_triplet }}
+        vcpkg integrate install
 
     - name: Install OpenGL for Linux
       if: matrix.os == 'ubuntu-latest'
