--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.20)
 project(trender VERSION 0.1.0 LANGUAGES C CXX)
 
 find_package(OpenGL REQUIRED)
+find_package(glfw3 REQUIRED)
 find_package(glm REQUIRED)
 
 set(CMAKE_CXX_STANDARD 23)
