Switch to GLAD 2.0
Didn't realize I was using glad 1.0. This should fix the issue with the windows build not finding the necessary khr files from glad. (I assume on Linux they are provided by a package automatically)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Glad
-add_library(glad STATIC ./thirdparty/glad/glad.c)
+add_library(glad STATIC ./thirdparty/glad/src/gl.c)
 target_include_directories(glad PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
+target_include_directories(glad PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad/include)
 
 # Rapidobj
 add_library(rapidobj INTERFACE)
@@ -73,6 +74,7 @@ target_include_directories(trender
     PRIVATE
     ./thirdparty
     ./thirdparty/fastgltf/include
+    ./thirdparty/glad/include
     ./src
 )
 
