--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - uses: lukka/get-cmake@latest
+
     - name: Setup vcpkg
       uses: lukka/run-vcpkg@v11
 
