--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y \
+          gcc-14 \
+          g++-14 \
           build-essential \
           cmake \
           ninja-build \
