--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
 
     - name: Setup vcpkg
       uses: lukka/run-vcpkg@v11
+      with:
+        vcpkgJsonGlob: 'vcpkg.json'
 
     - name: Install Linux system dependencies
       if: matrix.os == 'ubuntu-latest'
@@ -61,8 +63,10 @@ jobs:
     - name: Configure and build
       uses: lukka/run-cmake@v10
       with:
-        configurePreset: 'release'
-        buildPreset: 'release'
+        configurePreset: ${{ matrix.os == 'windows-latest' && 'release-windows' || 'release' }}
+        buildPreset: ${{ matrix.os == 'windows-latest' && 'release-windows' || 'release' }}
+      env:
+        VCPKG_DEFAULT_TRIPLET: ${{ matrix.os == 'windows-latest' && 'x64-windows-static' || 'x64-linux-static' }}
 
     - name: Package artifacts (Linux)
       if: matrix.os == 'ubuntu-latest'
