Try to copy over dlls
I think CRT statically linked as I didn't get that error this time. Still getting errors with using fastgltf and glfw3 now, though. If I just need to provide the dlls for those I'll be fine with that for a release and leave it to the future to statically link everything.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,6 +84,8 @@ jobs:
         Copy-Item release/${{ matrix.executable }} artifact/
         if (Test-Path release/resources) { Copy-Item -Recurse release/resources artifact/ }
         if (Test-Path release/shaders) { Copy-Item -Recurse release/shaders artifact/ }
+        # Copy any DLLs that were copied by the build process
+        Get-ChildItem -Path release -Filter "*.dll" | Copy-Item -Destination artifact/ -ErrorAction SilentlyContinue
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
