--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,9 @@ name: Build
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'src/**'
+      - 'release/**'
   workflow_dispatch:
 
 jobs:
